2014-02-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help-fns.el (help-C-file-name): Handle advised functions (bug#16478).
	* emacs-lisp/find-func.el (find-function-C-source): Idem.
	* emacs-lisp/nadvice.el (advice--cd*r): New function.
	* help-fns.el (describe-function-1): Use it.

2014-02-02  Glenn Morris  <rgm@gnu.org>

	* register.el (register-preview-default): New function,
	split from register-preview.
	(register-preview-function): Rename from register-preview-functions,
	make it not a hook.
	(register-preview): Use register-preview-function.
	(register-read-with-preview): Error on non-character event.  (Bug#16595)

2014-02-01  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-smie--implicit-semi-p): Check for
	`:' before binary operators (bug#16609).  Don't check for `:'
	before `[' and `(', or their syntax status.  A percent literal
	can't end with either.
	(ruby-font-lock-keywords): For built-ins that require arguments,
	check that they're followed by something that looks like argument
	(bug#16610).

2014-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* subr.el (butlast): Document what an omitted N means (bug#13437).
	(nbutlast): Ditto.

2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-generic): Make into a defsubst to make the stack
	depth shallower (bug#16587).
	(shr-tag-svg): Respect `shr-inhibit-images'.
	(shr-dom-to-xml): Respect `shr-blocked-images' (bug#15882).

2014-01-31  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-align-chained-calls): New option.
	(ruby-smie-grammar): Make "." right-associative.  Make its priority
	lower than the ternary and all binary operators.
	(ruby-smie-rules): Indent "(" relative to the first non-"."
	parent, or the first "." parent at indentation.
	Use `ruby-align-chained-calls' for indentation of "." tokens.
	(Bug#16593)

2014-01-31  Juri Linkov  <juri@jurta.org>

	* sort.el (delete-duplicate-lines): Remove `:weakness 'key'
	from `make-hash-table'.
